# yui-kr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
batch/: hard_k10-b14.sh  hard_k11-b14.sh  hard_k11-b15.sh  hard_k11-b16.sh  hard_k9-b14.sh  k10.sh  k11a.sh  k11n.sh  k3-7.sh  k8.sh  k9.sh
batch/b16/: k11a_123.sh  k11a_200.sh  k11a_237.sh  k11a_292.sh  k11a_320.sh  k11a_329.sh  k11a_354.sh  k11a_361.sh  k11a_366.sh
batch/b17/: k11a_280.sh  k11a_362.sh
data/: braid-10.csv  braid-11-hard.csv  braid-11.csv  homfly-10.csv  homfly-11.csv
results/: 10_10.json  10_101.json  10_104.json  10_108.json  10_110.json  10_111.json  10_116.json  10_119.json  10_12.json  10_120.json  10_121.json  10_123.json  10_124.json  10_125.json  10_127.json  10_128.json  10_129.json  10_13.json  10_130.json  10_132.json  10_134.json  10_136.json  10_137.json  10_144.json  10_145.json  10_146.json  10_149.json  10_15.json  10_150.json  10_151.json  10_152.json  10_153.json  10_154.json  10_156.json  10_158.json  10_159.json  10_160.json  10_163.json  10_164.json  10_165.json  (+347 more)
results/raw/: 10_1.json  10_100.json  10_102.json  10_103.json  10_105.json  10_106.json  10_107.json  10_109.json  10_11.json  10_112.json  10_113.json  10_114.json  10_115.json  10_117.json  10_118.json  10_122.json  10_126.json  10_131.json  10_133.json  10_135.json  10_138.json  10_139.json  10_14.json  10_140.json  10_141.json  10_142.json  10_143.json  10_147.json  10_148.json  10_155.json  10_157.json  10_16.json  10_161.json  10_162.json  10_17.json  10_18.json  10_27.json  10_28.json  10_30.json  10_32.json  (+479 more)
src/: lib.rs  main.rs
src/kr/: base.rs  data.rs  homology.rs  hor_cpx.rs  hor_cube.rs  hor_excl.rs  hor_homol.rs  mod.rs  tot_cpx.rs  tot_cube.rs  tot_homol.rs
src/lib/: calc.rs  kr.rs  lib.rs  util.rs
src/lib/internal/: base.rs  data.rs  hor_cpx.rs  hor_cube.rs  hor_homol.rs  mod.rs  tot_cpx.rs  tot_cpx_red.rs  tot_cube.rs  tot_homol.rs
src/lib/kr/: base.rs  data.rs  homology.rs  hor_cpx.rs  hor_cube.rs  hor_excl.rs  hor_homol.rs  mod.rs  result.rs  tot_cpx.rs  tot_cube.rs  tot_homol.rs
tests/: check_homfly.rs  hard_k11-b15.rs  hard_k11-b17.rs  hard_k9-b14.rs  k10-b14.rs  k10.rs  k11-b14.rs  k11-b15.rs  k11-b16.rs  k11-b17.rs  k11a.rs  k11n.rs  k3-7.rs  k8.rs  k9.rs
tests/common/: mod.rs
