[package]
name = "yui-kr"
version = "0.1.0"
authors = ["Taketo Sano <taketo1024@gmail.com>"]
description = "YUI-KR"
license = "MIT"
edition = "2021"

[[bin]]
name = "ykr"
path = "src/bin/main.rs"

[lib]
path = "src/lib/lib.rs"

[features]
default = ["multithread"]
multithread = ["rayon"]
batch_test = []

[profile.release]
debug = true
overflow-checks = true

[dependencies]
yui  =         { git = "https://github.com/taketo1024/yui", branch = "develop", features = ["tex"]}
yui-link =     { git = "https://github.com/taketo1024/yui", branch = "develop" }
yui-matrix =   { git = "https://github.com/taketo1024/yui", branch = "develop" }
yui-homology = { git = "https://github.com/taketo1024/yui", branch = "develop" }
# yui  =         { path = "../yui/yui", features = ["tex"] }
# yui-link =     { path = "../yui/yui-link" }
# yui-matrix =   { path = "../yui/yui-matrix" }
# yui-homology = { path = "../yui/yui-homology" }
num-bigint = "0.4.4"
num-traits = "0.2.18"
itertools = "0.12.1"
petgraph = "0.6.4"
derive_more = "0.99.17"
cartesian = "0.2.1"
delegate = "0.12.0"
num-integer = "0.1.46"
rayon = { version = "1.9.0", optional = true }
log = "0.4.21"
simplelog = "0.12.2"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
regex = "1.10.3"
cfg-if = "1.0.0"
