[package]
name = "yui-kr"
version = "0.1.0"
authors = ["Taketo Sano <taketo1024@gmail.com>"]
description = "YUI-KR"
license = "MIT"
edition = "2021"

[[bin]]
name = "ykr"
path = "src/bin/main.rs"

[lib]
path = "src/lib/lib.rs"

[features]
default = ["multithread"]
multithread = ["rayon"]
batch_test = []

[profile.release]
debug = true
overflow-checks = true

[dependencies]
yui  =         { path = "../yui/yui", features = ["tex"] }
yui-link =     { path = "../yui/yui-link" }
yui-matrix =   { path = "../yui/yui-matrix" }
yui-homology = { path = "../yui/yui-homology" }
# yui  =         { git = "https://github.com/taketo1024/yui", branch = "develop", features = ["tex"]}
# yui-link =     { git = "https://github.com/taketo1024/yui", branch = "develop" }
# yui-matrix =   { git = "https://github.com/taketo1024/yui", branch = "develop" }
# yui-homology = { git = "https://github.com/taketo1024/yui", branch = "develop" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
itertools = "0.11.0"
petgraph = "0.6.5"
derive_more = "0.99.18"
cartesian = "0.2.1"
delegate = "0.10.0"
num-integer = "0.1.46"
rayon = { version = "1.10.0", optional = true }
log = "0.4.22"
simplelog = "0.12.2"
clap = { version = "4.5.17", features = ["derive", "cargo"] }
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
regex = "1.10.6"
cfg-if = "1.0.0"
